[gd_scene load_steps=6 format=1]

[ext_resource path="res://gui/worldmap/tagfilter.gd" type="Script" id=1]
[ext_resource path="res://gui/worldmap/icons/select.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="tagfilter" type="ToolButton"]

margin/right = 24.0
margin/bottom = 20.0
rect/min_size = Vector2( 24, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
toggle_mode = false
flat = true
script/script = ExtResource( 1 )

[node name="tag" type="Polygon2D" parent="."]

polygon = Vector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
uv = Vector2Array(  )
color = Color( 1, 0, 0, 1 )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = true
invert/border = 1.0

[node name="selected" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( -4, -4 )
texture = ExtResource( 2 )
centered = false

[connection signal="pressed" from="." to="." method="_on_tagfilter_pressed"]

[connection signal="focus_enter" from="." to="." method="_on_tagfilter_focus_enter"]

[connection signal="focus_exit" from="." to="." method="_on_tagfilter_focus_exit"]


